tests/NormalTests/paczka1/small_fuzzy/80543497.err
Error in line 2: FVKwIDwUYHJ S419 58,9
Error in line 6: FVKwIDwUYHJ A620 89,4
Error in line 10: FVKwIDwUYHJ S419 73,7
